tdf#114093 fixing regression when clicking on fields

Change-Id: I6e5c7e644f26ca85a6c55ec5456add46a7b05404
Reviewed-on: https://gerrit.libreoffice.org/45927
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit 1c41d4e229deb5ae9d5d06df6c8d2585619bc102)
Reviewed-on: https://gerrit.libreoffice.org/45953